force-app/main/default/objects/Customer_Success_Health_Policy__mdt/Customer_Success_Health_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Customer Success Health Policy</label>
    <pluralLabel>Customer Success Health Policies</pluralLabel>
</CustomObject>