force-app/main/default/objects/Customer_Success_Health_Policy__mdt/fields/At_Risk_Threshold__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Threshold__c</fullName>
    <label>At Risk Threshold</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>