force-app/main/default/objects/Customer_Success_Health_Policy__mdt/fields/Healthy_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Threshold__c</fullName>
    <label>Healthy Threshold</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>