force-app/main/default/objects/Customer_Success_Health_Policy__mdt/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <description
  >One CMDT row per metric under a shared Policy_Key__c - e.g. 'Adoption', 'Support Volume', 'Renewal Proximity'. CustomerSuccessHealthService.recompute() groups rows by Policy_Key__c and folds each metric's Weight__c into the overall score.</description>
    <label>Metric</label>
    <length>80</length>
    <type>Text</type>
    <required>true</required>
</CustomField>