force-app/main/default/objects/Customer_Success_Health_Policy__mdt/fields/Missing_Data_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Missing_Data_Behaviour__c</fullName>
    <description
  >'Exclude' (default interpretation) or 'Treat As Critical' - how computeHealth() should treat a metric with no observed value, per doc Sprint 42 section 42.14.</description>
    <label>Missing Data Behaviour</label>
    <length>40</length>
    <type>Text</type>
</CustomField>