force-app/main/default/objects/Customer_Success_Health_Policy__mdt/fields/Watch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Watch_Threshold__c</fullName>
    <label>Watch Threshold</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>