force-app/main/default/objects/Customer_Success_Health_Policy__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>